# NumericalMethods

./: .gitignore  CMakeLists.txt  Makefile  SLAE.cpp  SLAE.h  Tasks.txt  gnu_compiler.lrn  main.cpp
Testing/: TestGenerator.cpp
data/json/: input_points.json  output_points.json
headers/: SLAE.h
include/: Basic.h  LargeDem.h  LargeMatrix.h  LinearAlgebra.h  Matrix.h  pch.h
scripts/python/: plot_graph.py
src/: Basic.cpp  LargeDem.cpp  LargeMatrix.cpp  LinearAlgebra.cpp  Matrix.cpp  SLAE.cpp  main.cpp
testing/: Gauss_Jordan.cpp  TestGenerator.cpp  TestGenerator.h  generated_Gauss_Jordan.input  generated_Gauss_Jordan.output  predefined_Gauss_Jordan.input  predefined_Gauss_Jordan.output
